refactor: 개발환경 프로퍼티 mysql 연동